<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_filtered"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.newyorkarticlesearch.Activities.FilteredActivity"
    tools:showIn="@layout/activity_filtered">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="58dp"
        android:id="@+id/tvDate"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:text="@string/sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDate"
        android:id="@+id/tvSort"
        android:ems="10"
        android:layout_marginTop="48dp"
        android:layout_alignLeft="@+id/tvDate"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:prompt="@string/sort_order"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvSort"
        android:layout_below="@id/tvDate"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="48dp"/>

    <TextView
        android:text="@string/desk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSort"
        android:layout_alignLeft="@+id/tvSort"
        android:layout_marginTop="78dp"
        android:id="@+id/tvNewsDeskValues"
        android:ems="10"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/tvNewsDeskValues"
        android:layout_below="@+id/tvSort"
        android:layout_marginTop="78dp"
        android:layout_alignParentRight="true">

    <CheckBox android:id="@+id/checkbox_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Arts" />
    <CheckBox android:id="@+id/checkbox_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fashion" />

        <CheckBox android:id="@+id/checkbox_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sports" />
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etDate"
        android:onClick="showDatePickerDialog"
        android:layout_alignBaseline="@+id/tvDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/datehint" />

    <Button
        android:text="@string/SAVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="82dp"
        android:id="@+id/btnSave"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <!--<DatePicker-->
        <!--android:layout_width="40dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:id="@+id/datePicker"-->
        <!--android:layout_toLeftOf="@id/tvDate"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->
</RelativeLayout>
